<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/first_app"
        android:textSize="30sp" />

    <Space
        android:layout_width="wrap_content"
        android:layout_height="30dp"></Space>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="start"
        android:text="@string/generate_random_number"
        android:textSize="20sp" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/generate_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/generate" />

        <TextView
            android:id="@+id/text_view_generated_num"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end"

            android:textSize="20sp"
            tools:text="0" />
    </androidx.appcompat.widget.LinearLayoutCompat>

    <Space
        android:layout_width="wrap_content"
        android:layout_height="30dp"></Space>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="start"

        android:text="@string/add_person"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/editTextTextPersonName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/name"
        android:inputType="textPersonName"
        android:padding="10dp" />

    <EditText
        android:id="@+id/editTextTextPersonSurname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/surname"
        android:inputType="textPersonName"
        android:padding="10dp" />

    <Button
        android:id="@+id/add_person_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add" />

    <Space
        android:layout_width="wrap_content"
        android:layout_height="30dp"></Space>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="start"
        android:text="@string/persons_created"
        android:textSize="20sp" />
    <TextView
        android:id="@+id/text_view_persons_created"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="start"
        android:textSize="20sp" />

</androidx.appcompat.widget.LinearLayoutCompat>